<?xml version="1.0"?>
<package format="2">
  <name>coxgraph_sim</name>
  <version>0.0.0</version>
  <description>Simulation package of Coxgraph.</description>

  <author email="xiangyu002@e.ntu.edu.sg">Mike Xiangyu Liu</author>

  <maintainer email="xiangyu002@e.ntu.edu.sg">Mike Xiangyu Liu</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>gazebo_ros</depend>
  <depend>mav_nonlinear_mpc</depend>
  <depend>mav_lowlevel_attitude_controller</depend>
  <depend>geodetic_utils</depend>
  <depend>active_3d_planning_app_reconstruction</depend>
  <depend>coxgraph</depend>
  <depend>coxgraph_msgs</depend>
  <depend>coxgraph_mod</depend>

</package>

